# s3-simple

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
examples/bucket-ops/: .gitignore  Cargo.toml
examples/bucket-ops/src/: main.rs
examples/streaming/: .gitignore  Cargo.toml  README.md
examples/streaming/src/: main.rs
src/: bucket.rs  command.rs  constants.rs  credentials.rs  error.rs  lib.rs  prelude.rs  signature.rs  types.rs
