[package]
name = "s3-simple"
version = "0.5.0"
edition = "2021"
rust-version = "1.82.0"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"
categories = ["api-bindings"]
keywords = ["async", "aws", "client", "s3", "tokio"]
description = "simple, fast and efficient s3 client for bucket operations "
readme = "README.md"
repository = "https://github.com/sebadob/s3-simple"

[lib]
doctest = false

[features]
default = ["rustls-tls-webpki-roots"]

rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-no-provider = ["reqwest/rustls-tls-no-provider"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]

native-tls = ["reqwest/native-tls"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]

[dependencies]
base64 = "0.22.0"
bytes = "1.6.0"
dotenvy = "0.15"
flume = "0.11.0"
futures-util = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.1.0"
md5 = "0.8.0"
percent-encoding = "2.3.1"
quick-xml = { version = "0.38.1", features = ["serialize"] }
reqwest = { version = "0.12.3", default-features = false, features = [
    "brotli",
    "stream",
] }
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2"
time = { version = "0.3.35", features = ["formatting", "macros"] }
tokio = { version = "1.37.0", features = ["fs", "macros", "time"] }
tracing = { version = "0.1.37", features = ["attributes"] }
url = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tracing-test = "0.2.4"
