[package]
name = "s3-simple"
version = "0.8.0"
edition = "2021"
rust-version = "1.88.0"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"
categories = ["api-bindings"]
keywords = ["async", "aws", "client", "s3", "tokio"]
description = "simple, fast and efficient s3 client for bucket operations "
readme = "README.md"
repository = "https://github.com/sebadob/s3-simple"

[lib]
doctest = false

[features]
default = ["rustls"]

rustls = ["reqwest/rustls"]
rustls-no-provider = ["reqwest/rustls-no-provider"]

native-tls = ["reqwest/native-tls"]
native-tls-no-alpn = ["reqwest/native-tls-no-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-vendored-no-alpn = ["reqwest/native-tls-vendored-no-alpn"]

webpki-roots = ["dep:webpki-root-certs"]

[dependencies]
base64 = "0.22.0"
bytes = "1.11.1"
dotenvy = "0.15"
flume = "0.12"
futures-util = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.1.0"
md5 = "0.8.0"
percent-encoding = "2.3.1"
quick-xml = { version = "0.39", features = ["serialize"] }
reqwest = { version = "0.13", default-features = false, features = [
    "charset",
    "http2",
    "brotli",
    "stream",
] }
serde = { version = "1.0.197", features = ["derive"] }
# update blocked by hmac
sha2 = "0.10.9"
thiserror = "2"
time = { version = "0.3.47", features = ["formatting", "macros"] }
tokio = { version = "1.37.0", features = ["fs", "macros", "time"] }
tracing = { version = "0.1.37", features = ["attributes"] }
url = "2.5.0"
webpki-root-certs = { version = "1.0.6", optional = true }

# Necessary to fix security issues in current versions.
aws-lc-sys = "0.39"
aws-lc-rs = "1.16.2"
quinn = "0.11.9"
quinn-proto = "0.11.14"
rustls-webpki = "0.103.10"

[dev-dependencies]
pretty_assertions = "1.4.0"
tracing-test = "0.2.4"
