[package]
name = "s3-simple"
version = "0.8.1"
edition = "2021"
rust-version = "1.88.0"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"
categories = ["api-bindings"]
keywords = ["async", "aws", "client", "s3", "tokio"]
description = "simple, fast and efficient s3 client for bucket operations "
readme = "README.md"
repository = "https://github.com/sebadob/s3-simple"

[lib]
doctest = false

[features]
default = ["rustls"]

rustls = ["reqwest/rustls", "dep:rustls-webpki"]
rustls-no-provider = ["reqwest/rustls-no-provider"]

native-tls = ["reqwest/native-tls"]
native-tls-no-alpn = ["reqwest/native-tls-no-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-vendored-no-alpn = ["reqwest/native-tls-vendored-no-alpn"]

webpki-roots = ["dep:webpki-root-certs"]

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
flume = "0.12.0"
futures-util = "0.3.32"
hex = "0.4.3"
hmac = "0.13.0"
http = "1.4.0"
md5 = "0.8.0"
percent-encoding = "2.3.2"
quick-xml = { version = "0.39.4", features = ["serialize"] }
reqwest = { version = "0.13.3", default-features = false, features = [
    "charset",
    "http2",
    "brotli",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "macros"] }
tokio = { version = "1.52.3", features = ["fs", "macros", "time"] }
tracing = { version = "0.1.44", features = ["attributes"] }
url = "2.5.8"
webpki-root-certs = { version = "1.0.7", optional = true }
rustls-webpki = { version = "0.103.13", optional = true }

[dev-dependencies]
dotenvy = "0.15.7"
pretty_assertions = "1.4.1"
tracing-test = "0.2.6"
